added a load level feature to game.java

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -2,3 +2,7 @@
 /MapEditor$ListenerType.class
 /MapEditor$MouseClass.class
 /Game$mouseClass.class
+/Game$ListenerType.class
+/Game$ListenerClass$mouseClass.class
+/Game$ListenerClass.class
+/Game$GameListenerClass.class
